--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "tests/googletest"]
-	path = tests/googletest
+[submodule "test/googletest"]
+	path = test/googletest
 	url = https://github.com/google/googletest.git
