--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,17 @@
-cmake_minimum_required(VERSION 3.0)
-project(MyProject VERSION 1.0.0 LANGUAGES CXX)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
-# Specify the C++ standard
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
+ADD_SUBDIRECTORY(tests/googletest)
 
-# Include directory for header files
-include_directories(${CMAKE_SOURCE_DIR}/header)
-
-# Add source files to the executable
-add_executable(run
-    src/inputoutput.cpp
-    src/Movie.cpp
-    src/MovieMethods.cpp
-    src/MovieDataSet.cpp
-    src/main.cpp
+add_library(simpleLibrary
+src/inputoutput.cpp
+src/MovieMethods.cpp
+src/MovieDataSet.cpp
+src/Movie.cpp
 )
 
-# If you have any libraries to link, you can use target_link_libraries
-# For example:
-# target_link_libraries(run PRIVATE some_library)
+ADD_EXECUTABLE(tests
+  src/test.cpp
+)
+
+TARGET_LINK_LIBRARIES(tests gtest)
+TARGET_COMPILE_DEFINITIONS(tests PRIVATE gtest_disable_pthreads=ON)
